# drivecat

./: AGENTS.md  README.md  pyproject.toml
docs/: collection-semantics.md  example_outputs.md
src/drivecat/: __main__.py  cli.py  collector.py  gws.py  models.py  store.py
src/drivecat/output/: __init__.py  ndjson.py  tree.py  tsv.py
tests/: test_collector.py  test_gws.py  test_tree.py
