[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drivecat"
version = "0.1.0"
description = "Minimal CLI for collecting and visualizing Google Drive folder structure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
drivecat = "drivecat.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
